@@ -3,21 +3,26 @@ package com.chip.board.global.jwt.authentication;
 import com.chip.board.global.jwt.JwtClaims;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
 
-public record JwtAuthentication (
-        Long userId
-) implements Authentication {
+public record JwtAuthentication(Long userId, String role) implements Authentication {
 
     public JwtAuthentication(JwtClaims claims) {
-        this(claims.userId());
+        this(claims.userId(), claims.role().name());
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role));
+    }
+
+    @Override
+    public Object getPrincipal() {
+        return userId;
     }
 
     @Override
@@ -31,22 +36,19 @@ public record JwtAuthentication (
     }
 
     @Override
-    public Object getPrincipal() {
-        return userId;
-    }
-
-    @Override
     public boolean isAuthenticated() {
         return true;
     }
 
     @Override
     public void setAuthenticated(boolean isAuthenticated) throws IllegalArgumentException {
-
+        if (!isAuthenticated) {
+            throw new IllegalArgumentException("Cannot set this token to unauthenticated");
+        }
     }
 
     @Override
     public String getName() {
-        return null;
+        return Objects.toString(userId, null);
     }
 }
